animation working but need to fix gap

--- a/frontend/src/components/cover_art/css/CoverArt.css
+++ b/frontend/src/components/cover_art/css/CoverArt.css
@@ -26,7 +26,7 @@
     background-color: rgba(0, 0, 0, 5%);
     padding: 2px 15px;
     transform: translateY(-100%);
-    transition: transform 1s ease-in-out;
+    transition: transform 500ms ease-in-out;
     position: relative;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
@@ -35,6 +35,10 @@
 
 .album-art-img:hover + .release-info {
     transform: translateY(0);
+}
+
+.album-art-img:hover ~ .release-container {
+    background-color: yellow;
 }
 
 .info-line {
